zag-poc/tests/diag/e0002_realtime_calls_io.expected
error[E0002]: capability violation — `@realtime` constraint broken in function `bad_transitive`
  --> tests/diag/e0002_realtime_calls_io.zag:9:1
   |
9 | fn bad_transitive() void @realtime {
   | ^^^^^^^^^^^^^^ effect occurs here
   = note: @realtime functions must not perform heap allocation, IO, or lock acquisition
   = hint: remove the allocation/IO/lock, or remove the @realtime annotation
