zag-poc/tests/diag/e0002_realtime_calls_io.zag
// E0002: @realtime function transitively calls IO via a helper
// Uses print_str (IO effect) which @realtime forbids
extern fn print_str(s: []u8) void @io;

fn do_io() void {
    print_str("side effect");
}

fn bad_transitive() void @realtime {
    do_io();
}

fn main() i32 {
    return 0;
}
